update learning docs the gradle module